--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,10 @@ synom = "0.11.3"
 
 [dependencies.hyper]
 git = "https://github.com/hyperium/hyper"
-rev = "fed04dfb58e19b408322d4e5ca7474871e848a35"
 
 [dependencies.ruma-api]
-git = "https://github.com/ruma/ruma-api"
-rev = "3635fe51ac31b9ff899c70a0d1218caa8cf6a8dc"
+git = "https://github.com/neosam/ruma-api"
+branch = "hyper"
 
 [dependencies.syn]
 features = ["full"]
